[package]
name = "dir_indexer"
version = "0.0.1"
edition = "2021"
authors = ["mailmeatsri14@gmail.com"]
description = "The project is a Rust library for indexing and retrieving file paths within a directory tree"
documentation = "https://docs.rs/dir_indexer"
include = ["src/lib.rs", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE"]
keywords = ["directory", "linux", "paths"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sri-varshan14/"
rust-version = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
